[gd_scene format=3 uid="uid://hchep5lvq86w"]

[ext_resource type="Script" uid="uid://beju08dyvpfjq" path="res://scripts/selection_page.gd" id="1_jkxll"]
[ext_resource type="Texture2D" uid="uid://b7b23ao4y87a1" path="res://images/bg/mainmenu_bg.jpg" id="2_jkxll"]
[ext_resource type="FontFile" uid="uid://cro0ihcubbiiq" path="res://font/CaesarDressing-Regular.ttf" id="3_3d6mh"]
[ext_resource type="PackedScene" uid="uid://cmu2nyufp5ofm" path="res://scenes/misc/selection_list_item.tscn" id="3_l823m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jkxll"]
texture = ExtResource("2_jkxll")
expand_margin_top = 200.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkxll"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l823m"]

[node name="selection_page" type="Control" unique_id=249616221]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jkxll")

[node name="Panel" type="Panel" parent="." unique_id=1326827466]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_behavior_recursive = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jkxll")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=898800289]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 960.0
mouse_filter = 2
mouse_behavior_recursive = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer" unique_id=807688391]
layout_mode = 2
mouse_filter = 2
mouse_behavior_recursive = 2

[node name="ItemContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer" unique_id=1388920528]
custom_minimum_size = Vector2(1792, 896)
layout_mode = 2
mouse_filter = 2
mouse_behavior_recursive = 2

[node name="SelectionListItem" parent="PanelContainer/ScrollContainer/ItemContainer" unique_id=276075663 instance=ExtResource("3_l823m")]
layout_mode = 2
rank = 1
title = "Evaluate The Functions"
file_path = "res://package/default/EvaluateFunctions.json"
subject = "Mathematics"

[node name="MainMenuBtn" type="Button" parent="." unique_id=1761199626]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0040001
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 1000.0
offset_right = -1615.6802
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_3d6mh")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_jkxll")
text = "Main Menu"

[node name="StartGameBtn" type="Button" parent="." unique_id=2051500351]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.015000001
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1608.0
offset_top = 983.8
offset_right = -59.5
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_3d6mh")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_l823m")
text = "Start Game"

[node name="ImportBtn" type="Button" parent="." unique_id=1927478897]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0040001
anchor_bottom = 1.0
offset_left = 1352.0
offset_top = 1000.0
offset_right = -327.68018
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_3d6mh")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_l823m")
text = "Import"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
[connection signal="pressed" from="StartGameBtn" to="." method="_on_start_game_btn_pressed"]
[connection signal="pressed" from="ImportBtn" to="." method="_on_import_btn_pressed"]
